# trezor-lib

./: CMakeLists.txt  build.sh  build_pi_zero.sh  checkout
